--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,44 @@
+# Dependencias
+/node_modules
+
+# Archivos de ambiente
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Directorios de caché
+.cache
+.next
+.nuxt
+dist
+build
+
+# Varios archivos y directorios
+.DS_Store
+Thumbs.db
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+yarn.lock
+
+# Directorios de salida de compilación
+/out
+/build
+
 # Logs
 logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Directorio de cobertura de pruebas
+/coverage
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Archivos de perfil de rendimiento
+*.pid
+*.pid.lock
+*.seed
+*.pid.lock
