--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,11 +17,16 @@ jobs:
         with:
           node-version: 18
 
+      - name: 📦 Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
       - name: 📥 Install dependencies
-        run: npm install
+        run: pnpm install
 
       - name: 🏗️ Build project
-        run: npm run build
+        run: pnpm run build
 
       - name: 📂 Sync files
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
