Añadimos variables de env al proceso de CICD

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,9 @@ jobs:
         run: pnpm install
 
       - name: 🏗️ Build project
+        env:
+          VITE_GOOGLE_CLIENT_ID: ${{ secrets.VITE_GOOGLE_CLIENT_ID }}
+          VITE_API_URL: ${{ secrets.VITE_API_URL }}
         run: pnpm run build
 
       - name: 📂 Sync files
