--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
     ],
     "start_url": "/",
     "display": "standalone",
-    "background_color": "#fe6f14",
+    "background_color": "#f7f7f7",
     "theme_color": "#fe6f14",
     "description": "Profit&Lost helps you efficiently manage your personal finances. Track expenses, manage bank accounts, and gain insights into your financial health."
 }
