--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
             "type": "image/png"
         }
     ],
-    "start_url": "/",
+    "start_url": "/dashboard",
     "display": "standalone",
     "background_color": "#f7f7f7",
     "theme_color": "#fe6f14",
