--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
     "start_url": "/dashboard",
     "display": "standalone",
     "background_color": "#f7f7f7",
-    "theme_color": "#fe6f14",
+    "theme_color": "#f7f7f7",
     "description": "Profit&Lost helps you efficiently manage your personal finances. Track expenses, manage bank accounts, and gain insights into your financial health.",
     "orientation": "portrait",
     "scope": "/",
