--- a/package.json
+++ b/package.json
@@ -10,33 +10,32 @@
     "preview": "pnpm vite preview"
   },
   "dependencies": {
-    "@auth0/auth0-react": "^2.2.4",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.3.1",
-    "@mui/x-charts": "^7.23.2",
+    "@mui/icons-material": "^6.4.8",
+    "@mui/material": "^6.4.7",
+    "@mui/x-charts": "^7.27.1",
     "@react-oauth/google": "^0.12.1",
-    "i18next": "^24.2.1",
-    "i18next-browser-languagedetector": "^8.0.2",
+    "i18next": "^24.2.3",
+    "i18next-browser-languagedetector": "^8.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hot-toast": "^2.5.1",
-    "react-i18next": "^15.4.0",
-    "react-router-dom": "^7.1.1"
+    "react-hot-toast": "^2.5.2",
+    "react-i18next": "^15.4.1",
+    "react-router-dom": "^7.3.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
+    "@eslint/js": "^9.22.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.17.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "globals": "^15.14.0",
-    "sass": "^1.83.1",
+    "eslint": "^9.22.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^15.15.0",
     "shx": "^0.3.4",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "typescript": "~5.6.3",
+    "typescript-eslint": "^8.26.1",
+    "vite": "^6.2.1"
   }
 }
