--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
       - name: 🏗️ Build project
         env:
           VITE_GOOGLE_CLIENT_ID: ${{ secrets.VITE_GOOGLE_CLIENT_ID }}
-          VITE_API_URL: https://app.profit-lost.com
+          VITE_API_URL: https://api.profit-lost.com
         run: pnpm run build
 
       - name: 📂 Sync files
