--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.4.8",
+    "@mui/icons-material": "^7.3.1",
     "@mui/material": "^6.4.7",
     "@mui/x-charts": "^7.27.1",
     "@react-oauth/google": "^0.12.1",
@@ -20,6 +20,7 @@
     "i18next-browser-languagedetector": "^8.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.4.1",
     "react-router-dom": "^7.3.0"
